[package]
authors = ["yisibl <percyley@qq.com>"]
edition = "2021"
license = "MPL-2.0"
name = "resvg-js"
version = "1.0.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
env_logger = "0.10.1"
log = "0.4"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
svgtypes = "0.13.0"
thiserror = "1.0.37"
png = "=0.17.10"
pathfinder_geometry = "0.5.1"
pathfinder_content = { version = "0.5.0", default-features = false }
pathfinder_simd = { version = "0.5.1", features = ["pf-no-simd"] }
futures = "0.3.29"

[target.'cfg(all(not(all(target_os = "linux", target_arch = "aarch64", target_env = "musl")), not(all(target_os = "windows", target_arch = "aarch64")), not(target_arch = "wasm32")))'.dependencies]
mimalloc-rust = { version = "0.2" }

[target.'cfg(target_arch = "wasm32")'.dependencies]
wasm-bindgen = "0.2.89"
js-sys = "0.3.64"
resvg = { version = "=0.34.1", default-features = false, features = [
    "raster-images",
] }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
napi = { version = "2.14.1", features = ["serde-json", "async"] }
napi-derive = "2.14.2"
resvg = { version = "=0.34.1", default-features = false, features = [
    "raster-images",
] }

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true      # Enable Link Time Optimization
opt-level = "z"
strip = true
# Setting this to 1 may improve the performance of generated code, but may be slower to compile.
# https://doc.rust-lang.org/rustc/codegen-options/index.html#codegen-units
codegen-units = 1

[patch.crates-io]
resvg = { git = "https://github.com/zimond/resvg", rev = "3495d870" }
